# src/controllers/taskController.js
@@ -1,7 +1,12 @@
 import * as taskService from '../services/taskService.js';
 
 export async function getTasks(req, res, next) {
-  const tasks = await taskService.getAllTasks();
+  let { completed } = req.query;
+
+  if (completed !== undefined) {
+    completed = completed === 'true';
+  }
+  const tasks = await taskService.getAllTasks(completed);
   res.json(tasks);
 }
 
